# Stratogi

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  res.qrc  res_smartphone.qrc  stratogi.pro
includes/: ctypes.h  figuretypes.h  signals.hpp
includes/Abstract/: abstractBoard.hpp  abstractEngine.hpp  abstractFigure.hpp  abstractGame.hpp
includes/Chess/: chessBoard.h  chessengine.h  chessfigures.h  chessgame.h
includes/Shogi/: shogiBoard.h  shogiTable.h  shogiengine.h  shogifigures.h  shogigame.h
install/android/: AndroidManifest.xml  AndroidManifest_new.xml.in  AndroidManifest_old.xml.in  build.gradle  build.gradle.in  libs.xml.in
install/android/res/values/: libs.xml
install/unix/: Stratogi-install-V0.sh  Stratogi.desktop.in  qt_lin.conf  unix_archiv.in
res/qml/: Background.qml  Button.qml  Cell.qml  CheckMateDialog.qml  ChessBoard.qml  ChessMain.qml  CustomDrawer.qml  DefaultBackground.qml  DrawGameDialog.qml  EngineSettingDialog.qml  MainMenu.qml  MainMenu_smartphone.qml  PromotionDialog.qml  ShogiBoard.qml  ShogiMain.qml  ShogiTableBottom.qml  ShogiTableTop.qml  TransformDialog.qml  UndoBtn.qml  main.qml  main_smartphone.qml
src/: main.cpp
src/Abstract/: abstractBoard.cpp  abstractEngine.cpp  abstractFigure.cpp  abstractGame.cpp
src/Chess/: chessBoard.cpp  chessengine.cpp  chessfigures.cpp  chessgame.cpp
src/Shogi/: shogiBoard.cpp  shogiTable.cpp  shogiengine.cpp  shogifigures.cpp  shogigame.cpp
